# CrackFront

./: .gitignore  .travis.yml  AUTHORS  Notes.md  README.md  compile_doc.sh  deploy_key.enc  env.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
CrackFront/: Circular.py  CircularEnergyReleaseRate.py  CircularFlat.py  DiscoverVersion.py  GenericElasticLine.py  GenericElasticLineWithEnergy.py  Roughness.py  Straight.py  StraightForRoughness.py  __init__.py
commandline/: plot_nits.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
examples/: circular_cartesian_eggbox.py  circular_eggbox_check_interp.py  circular_jkr_stiffness_vs_crack_front_stiffness.py  circular_lin_vs_lesslin.py  circular_random.py  elastic_line_preconditioning.py  interpolation_biphase.py  rosso_krauth_on_sphere.py  roughness_to_adhesion_heterogeneity.html  roughness_to_adhesion_heterogeneity.py  sinewave_asymmetric_eggbox.py  sinewave_random.py  sinewave_roughness_vs_BEM.py  sphere_on_waviness.py  time_fft_vs_matprod.py
gpu/: Notes.md  README.md  cuda_memory_usage.html  cuda_memory_usage.py  cuda_memory_usage_job.sh  elastic_line_rosso_krauth_benchmark_gpu.py  pytorch_benchmarks.html  pytorch_benchmarks.py  simple_straight_crack.py  simple_straight_crack_gpu.py  simple_straight_crack_profiled.py  simple_straight_crack_pytorch.py  simulate.py  sphere_cuda_memory_usage.py  sphere_rosso_krauth_benchmark.py  time_pinning_field_evaluation.py  time_propagate_rosso_krauth.html  time_propagate_rosso_krauth.py  time_sphere_rosso_krauth.html  time_sphere_rosso_krauth.py  time_sphere_rosso_krauth_large_systems.html  time_sphere_rosso_krauth_large_systems.py
helpers/: check_trust_region_fixed_cg.py  check_trust_region_gradient_cg.py
maintenance/: copyright.py  replace_header.py  update_license_headers.sh
singularity/: dep_pnetcdf_openmpi-4.0.2-gcc-9.def  gpu_jupyterlab.def  gpu_minimal_dependencies.def  minimal_dependencies.def
test/: test_RK_propagation_pytorch.py  test_circular.py  test_circular_flat.py  (+9 more)
(+26 files in other folders)
