[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "CrackFront"
description = "Efficient contact mechanics using crack front methods"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Antoine Sanner", email = "antoine.sanner@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = [ "version" ]
dependencies = [
    "Adhesion",
    "torch"
]

[project.optional-dependencies]
test = [
    "flake8<5",
    "pytest",
    "pytest-cov",
    "pytest-flake8"
]

[project.urls]
#documentation = "https://contactengineering.github.io/CrackFront/"
repository = "https://github.com/ContactEngineering/CrackFront"
#changelog = "https://github.com/ContactEngineering/CrackFront/blob/master/CrackFront/ChangeLog.md"
